random number generator + removed 2D vectors, a couple other small fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(IPCsim)
 set(HELPERS_FILES
   src/cell_lists.hpp
   src/cell_lists.cpp
-  src/zilrandom.hpp
+  src/randomNumberGenerator.hpp
   src/zilvectors.hpp
 )
 set(IPC_CLASS_FILES
