--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,10 +30,13 @@ set(CMAKE_BUILD_TYPE Release)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${OpenMP_CXX_FLAGS}")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} bld)
 
 add_executable(${PROJECT_NAME} ${ALL_FILES})
 target_link_libraries(${PROJECT_NAME} ${OpenMP_CXX_LIBRARIES})
 
-#message(STATUS "COMMON FLAGS: ${CMAKE_CXX_FLAGS}")
-#message(STATUS "DEBUG FLAGS: ${CMAKE_CXX_FLAGS_DEBUG}")
-#message(STATUS "RELEASE FLAGS: ${CMAKE_CXX_FLAGS_RELEASE}")
+message(STATUS "COMMON FLAGS: ${CMAKE_CXX_FLAGS}")
+message(STATUS "DEBUG FLAGS: ${CMAKE_CXX_FLAGS_DEBUG}")
+message(STATUS "RELEASE FLAGS: ${CMAKE_CXX_FLAGS_RELEASE}")
+
+message(STATUS "CMAKE_RUNTIME_OUTPUT_DIRECTORY: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
