added g(r) helper, inserted it in the 2 patch sim program

--- a/src/2patches/CMakeLists.txt
+++ b/src/2patches/CMakeLists.txt
@@ -7,6 +7,7 @@ set(HELPERS
     ../helpers/cell_lists.hpp
     ../helpers/cell_lists.cpp
     ../helpers/randomNumberGenerator.hpp
+    ../helpers/pair_correlation_function.hpp
 )
 set(COMMON_FILES
     ${HELPERS}
