--- a/src/postprocess/CMakeLists.txt
+++ b/src/postprocess/CMakeLists.txt
@@ -20,7 +20,7 @@ set(POSTPROCESS
 set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_BUILD_TYPE Release)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${OpenMP_CXX_FLAGS}")
 
 add_executable(${PROJECT_NAME} ${COMMON_FILES} ${POSTPROCESS})
