--- a/src/postprocess/CMakeLists.txt
+++ b/src/postprocess/CMakeLists.txt
@@ -7,14 +7,15 @@ set(HELPERS
     ../helpers/randomNumberGenerator.hpp
     ../helpers/isotropic_pair_correlation_function.hpp
 )
-set(COMMON_FILES
-    ${HELPERS}
-    ../IPC.hpp
-)
 set(POSTPROCESS
     IPCpostprocess.cpp
     IPCpostprocess.hpp
     main.cpp
+)
+set(ALL_FILES
+    ${HELPERS}
+     ${POSTPROCESS}
+    ../IPC.hpp
 )
 
 set(CMAKE_BUILD_TYPE Debug)
@@ -23,4 +24,4 @@ set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${OpenMP_CXX_FLAGS}")
 
-add_executable(${PROJECT_NAME} ${COMMON_FILES} ${POSTPROCESS})
+add_executable(${PROJECT_NAME} ${ALL_FILES})
