forgotten file from previous commit

--- a/src/IPEsimMC/CMakeLists.txt
+++ b/src/IPEsimMC/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.5)
 project(IPEsim)
 
 set(ALL_FILES
-#    ../IPC.hpp
+    ../IPC.hpp
     main.cpp
     IPEsimulation.hpp
     IPEsimulation.cpp
