added new potential printing option for Emanuela-style U(r) at 6 fixed orientations

--- a/src/IPCsimMD/CMakeLists.txt
+++ b/src/IPCsimMD/CMakeLists.txt
@@ -9,6 +9,7 @@ set(ALL_FILES
     IPCsimulationCommon.cpp
     IPCsimulation.cpp
     IPCsimulationJanus.cpp
+    IPCsimulationPrint.cpp
 )
 
 add_executable(${PROJECT_NAME} ${ALL_FILES})
