--- a/src/IPEsimMC/input.in
+++ b/src/IPEsimMC/input.in
@@ -1,78 +1,16 @@
-4         0.65
-2.5e-3    10
-.245728   -3.11694  -3.11694
-21.2298   21.2298   21.2298
-.142495
-0.22      0.38
-0.22      0.38
-1.        1.        1.
-500       15
-1e-6      1e-12
-0
--.5       -.5
-1.        1.        1.
+2         0.25
+1
+0.1       -1.1      6.1
+1.0
+0.4       0.22
+0.2       0.2
 ________________________________________________________________
 |               explanation                                     |
 |                                                               |
-
-IN >> N1 >> density >> desiredTemperature;
-IN >> simulationTimeStep >> printingInterval >> simulationTotalDuration;
-IN >> e_BB >> e_Bs1 >> e_Bs2;
-IN >> e_s1s1 >> e_s2s2 >> e_s1s2;
-IN >> e_min;
-IN >> firstPatchEccentricity >> firstPatchRadius;
-IN >> secndPatchEccentricity >> secndPatchRadius;
-IN >> mass[1] >> mass[2] >> mass[0];
-IN >> fakeHScoefficient >> fakeHSexponent;
-IN >> forceAndEnergySamplingStep >> tollerance;
-IN >> isFieldEnabled;
-if(isFieldEnabled) {
-    IN >> ratioChargeFirstPatchOverIpcCenter >> ratioChargeFirstPatchOverIpcCenter;
-    IN >> externalFieldIpcCenter[0] >> externalFieldIpcCenter[1] >> externalFieldIpcCenter[2];
-}
-  
-  30n
-.817244   -25.2095  228.967   .946876
-0.32      0.28
-
-30c
-5.28406   -83.4239  228.967   2.95801
-0.32      0.28
-
-45n
-.245728   -3.11694  21.2298   .142495
-0.22      0.38
-45s1c
-.916638   -10.9008  58.9717   .494446
-45s2c
-1.19199   -13.1433  58.9717   .590266
-45s3c
-1.50862   -15.3859  58.9717   .683279
-45s4c
-1.86654   -17.6285  58.9717   .773484
-45s5c
-2.26575   -19.8711  58.9717   .860882
-45s6c
-2.70624   -22.1136  58.9717   .945473
-45s7c
-3.18802   -24.3562  58.9717   1.02726
-
-
-
-Sfere quasirigide
-0         0         0         1
-.1        .1
-
-
-
-gnuplot
-p [.95:] 'siml/potentials.out' u 1:2, '' u 1:3, '' u 1:4
-p [.95:] 'siml/potentials.out' u 1:5, '' u 1:6, '' u 1:7
-p [:] 'siml/evolution.out' t 'T' w l, '' u 1:3 t 'K' w l, '' u 1:4 t 'u' w l
-p [:] 'siml/evolution.out' u 1:5 t 'u+k' w l
-vmd
-set sel [atomselect top all]
-atomselect0
-atomselect0 set radius 
-
-pbc set {1.0, 1.0, 1.0} -all
+inputFile >> N1 >> density;
+nIPEs = 4*N1*N1*N1;
+inputFile >> printingInterval;
+inputFile >> e_BB >> e_Bs >> e_ss;
+inputFile >> e_min;
+inputFile >> deltaOverSigma >> patchEccentricity;
+inputFile >> deltaTrans >> deltaRot;
