IPCsimMD: most of the data analysis is now computed on-the-fly during the simulation

--- a/src/IPCsimMD/CMakeLists.txt
+++ b/src/IPCsimMD/CMakeLists.txt
@@ -10,6 +10,7 @@ set(ALL_FILES
     IPCsimulation.cpp
     IPCsimulationJanus.cpp
     IPCsimulationPrint.cpp
+    IPCsimulationAnalysis.cpp
 )
 
 add_executable(${PROJECT_NAME} ${ALL_FILES})
